Added OperatorKey role validation